优化课程管理更新亮点管理